--- a/03_Forest_Cover_Type_Prediction/03_Forest_Cover_Type_Prediction.ipynb
+++ b/03_Forest_Cover_Type_Prediction/03_Forest_Cover_Type_Prediction.ipynb
@@ -24,15 +24,15 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://LAPTOP-9RU984SS:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.56.1:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.2.0</code></dd>\n",
+       "                <dd><code>v3.2.1</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>Group Assignment 2</code></dd>\n",
+       "                <dd><code>Forest Cover Type</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -40,7 +40,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x21626b047c0>"
+       "<pyspark.sql.session.SparkSession at 0x227ccaec8e0>"
       ]
      },
      "execution_count": 1,
@@ -58,7 +58,7 @@
     "findspark.init()\n",
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName('Group Assignment 2')\\\n",
+    "spark = SparkSession.builder.appName('Forest Cover Type')\\\n",
     ".config('spark-master', 'local')\\\n",
     ".getOrCreate()\n",
     "\n",
